# goph419-f2023-lab01-stML

./: README.md  pyproject.toml
Repos/Courses/cpsc217/: sept25.py
Repos/Courses/goph419/ClassNotes/: function_examples.py  sept28notes.py
Repos/Courses/goph419/ClassNotes/OCT 19/src/: Linalg.py  Linalg_examples.py
examples/: driver.py
src/: Launch_Angle_Range.py  Testingthings.py  driver.py  launch.py  tests.py
src/my_python_package/: operators.py
